<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".ui.auth.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/include_app_bar" />

            <View
                android:id="@+id/appBarShadow"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@drawable/top_shadow"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".5">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_put_phone"
                android:layout_marginStart="@dimen/base_19"
                android:layout_marginTop="@dimen/base_48"
                android:layout_marginEnd="@dimen/base_19"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <ru.breffi.storyidsample.ui.widget.CustomEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/base_46"
                    android:background="@color/background"
                    android:hint="@string/hint_phone"
                    android:imeActionId="@+id/action_confirm"
                    android:inputType="phone"
                    android:textAppearance="@style/RobotoRegular.14"
                    tools:ignore="InvalidImeActionId" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/nextButton"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_16"
                android:layout_marginTop="@dimen/base_64"
                android:layout_marginEnd="@dimen/base_16"
                android:layout_marginBottom="@dimen/base_64"
                android:background="@color/red"
                android:minHeight="58dp"
                android:text="@string/label_get_code"
                android:paddingStart="@dimen/base_40"
                android:paddingEnd="@dimen/base_40"
                android:textColor="@color/white" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".8"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>