<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/docsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_16"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ru.breffi.storyidsample.ui.widget.StaticHintEditText
                android:id="@+id/tvItn"
                android:layout_width="@dimen/base_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_8"
                android:layout_marginTop="@dimen/base_20"
                android:layout_marginEnd="@dimen/base_8"
                android:layout_marginBottom="@dimen/base_30"
                app:hint="@string/hint_itn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/itnImgLabel"
                android:layout_width="@dimen/base_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_8"
                android:layout_marginTop="@dimen/base_32"
                android:layout_marginEnd="@dimen/base_8"
                android:text="@string/label_itn_scan"
                android:textAppearance="@style/RobotoRegular.12"
                android:textColor="#CC3F3D3D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItn"
                />

            <LinearLayout
                android:id="@+id/itnImgLayout"
                android:layout_width="@dimen/base_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_18"
                android:layout_marginBottom="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itnImgLabel"
                >

                <ImageView
                    android:id="@+id/addItn"
                    android:layout_width="@dimen/doc_image_width"
                    android:layout_height="@dimen/doc_image_height"
                    android:layout_marginStart="@dimen/base_8"
                    android:layout_marginEnd="@dimen/base_8"
                    android:background="@drawable/ic_add_image"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonSave"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="58dp"
            android:layout_marginStart="@dimen/base_16"
            android:layout_marginTop="@dimen/base_64"
            android:layout_marginEnd="@dimen/base_16"
            android:layout_marginBottom="@dimen/base_64"
            android:background="@color/red"
            android:text="@string/button_save_changes"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/docsLayout"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>